fix(pro:textarea): textarea el shouldn't show scrollbar (#1080)

--- a/packages/pro/textarea/style/index.less
+++ b/packages/pro/textarea/style/index.less
@@ -129,6 +129,7 @@
       outline: 0;
       width: 100%;
       resize: none;
+      overflow: hidden;
 
       &[disabled] {
         cursor: not-allowed;
